# middleware/validate.js
@@ -24,6 +24,27 @@ const saveCharacter = (req, res, next) => {
     });
 };
 
+const saveLocation = (req, res, next) => {
+    const validationRule = {
+        locationName: 'required|string',
+        CountryOfOrigin: 'string',
+        bookOfFirstAppearance: 'required|integer|min:1',
+        bookOfLastAppearance: 'required|integer|max:7'
+    }
+    validator(req.body, validationRule, {}, (err, status) =>{
+        if(!status){
+            res.status(412).send({
+                success: false,
+                message: 'Validation Failed',
+                data: err
+            });
+        } else {
+            next();
+        }
+    });
+};
+
 module.exports = {
-    saveCharacter
+    saveCharacter,
+    saveLocation
 };
