# routes/index.js
@@ -3,5 +3,7 @@ const routes = require('express').Router();
 const myController = require ('../controllers');
 
 routes.use('/character', require('./character'));
+routes.use('/location', require('./location'));
+
 
 module.exports = routes;
